# FSA.IncidentsManagement/Controllers/Incidents.cs
@@ -1,13 +1,13 @@
-﻿using FSA.IncidentsManagement.Models;
-using FSA.IncidentsManagement.Root.Contracts;
+﻿using AutoMapper;
+using FSA.IncidentsManagement.Models;
 using FSA.IncidentsManagement.Root.Domain;
 using FSA.IncidentsManagement.Root.Models;
-using FSA.SIMSManagerDb.Contracts;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.Extensions.Logging;
 using Swashbuckle.AspNetCore.Annotations;
 using System.ComponentModel.DataAnnotations;
+using System.Linq;
 using System.Threading.Tasks;
 
 namespace FSA.IncidentsManagement.Controllers
@@ -19,16 +19,18 @@ namespace FSA.IncidentsManagement.Controllers
     public class IncidentsController : ControllerBase
     {
         private readonly ILogger<IncidentsController> log;
+        private readonly IMapper mapper;
         private readonly ISIMSApplication simsApp;
 
 
-        public IncidentsController(ILogger<IncidentsController> log, ISIMSApplication simsApp)
+        public IncidentsController(ILogger<IncidentsController> log, IMapper mapper, ISIMSApplication simsApp)
         {
             this.log = log;
+            this.mapper = mapper;
             this.simsApp = simsApp;
         }
 
-        [HttpGet()]
+        [HttpGet("{id}")]
         [SwaggerOperation(Summary = "Get incident by id")]
         [ProducesResponseType(typeof(IncidentsDisplayModel), 200)]
         [ProducesResponseType(500)]
@@ -46,7 +48,8 @@ namespace FSA.IncidentsManagement.Controllers
         [Produces("application/json")]
         public async Task<IActionResult> UpdateIncident([FromBody, SwaggerParameter("Updated Incident", Required = true)] IncidentUpdateModel incident)
         {
-            return new OkObjectResult(await this.simsApp.Incidents.Update(incident.ToClient()));
+            var mappedIncindet = mapper.Map<IncidentUpdateModel, BaseIncident>(incident);
+            return new OkObjectResult(await this.simsApp.Incidents.Update(mappedIncindet));
         }
 
         [HttpPost()]
@@ -59,22 +62,22 @@ namespace FSA.IncidentsManagement.Controllers
             return new OkObjectResult(await this.simsApp.Incidents.Add(incident.ToClient()));
         }
 
-        [HttpPost("Classification/{id}")]
+        [HttpPost("Classification/{id}/{classificationId}")]
         [SwaggerOperation(Summary = "Update classification of an incident")]
         [ProducesResponseType(typeof(BaseIncident), 200)]
         [ProducesResponseType(500)]
         [Produces("application/json")]
-        public async Task<IActionResult> UpdateClassification([FromRoute] int id, [Required] int classificationId)
+        public async Task<IActionResult> UpdateClassification([FromRoute] int id, [FromRoute] int classificationId)
         {
             return new OkObjectResult(await this.simsApp.Incidents.UpdateClassification(id, classificationId));
         }
 
-        [HttpPost("Status/{id}")]
+        [HttpPost("Status/{id}/{statusId}")]
         [SwaggerOperation(Summary = "Update status of an incident")]
         [ProducesResponseType(typeof(BaseIncident), 200)]
         [ProducesResponseType(500)]
         [Produces("application/json")]
-        public async Task<IActionResult> UpdateStatus([FromRoute] int id, [Required] int statusId)
+        public async Task<IActionResult> UpdateStatus([FromRoute] int id, [FromRoute] int statusId)
         {
             return new OkObjectResult(await this.simsApp.Incidents.UpdateStatus(id, statusId));
         }
@@ -83,9 +86,9 @@ namespace FSA.IncidentsManagement.Controllers
         [SwaggerOperation(Summary = "Close list of incidents")]
         [ProducesResponseType(200)]
         [ProducesResponseType(500)]
-        public async Task<IActionResult> CloseAll([Required] int[] incidentIds)
+        public async Task<IActionResult> CloseAll([Required] IncidentCloseViewModel incidentClose)
         {
-            await this.simsApp.Incidents.BulkClose(incidentIds);
+            await this.simsApp.Incidents.BulkClose(incidentClose.IncidentIds);
             return new OkResult();
         }
 
@@ -97,6 +100,27 @@ namespace FSA.IncidentsManagement.Controllers
         {
             await this.simsApp.Incidents.UpdateLeadOfficer(officer.Ids, officer.Officer);
             return new OkResult();
+        }
+
+        [HttpPost("Dashboard")]
+        [SwaggerOperation(Summary = "Incident dashboard search")]
+        [ProducesResponseType(typeof(IncidentDashboardView), 200)]
+        [ProducesResponseType(500)]
+        [Produces("application/json")]
+        public async Task<IActionResult> GetIncidentDashboard(DashboardSearchViewModel dashboard)
+        {
+            log.LogInformation($"search terms : {dashboard.Search} {dashboard.PageNo} {dashboard.PageSize}", "GetIncidentsDashboard");
+
+            if (dashboard.PageNo < 1 || dashboard.PageSize < 0)
+                return new OkObjectResult(new PagedResult<IncidentDashboardView>(Enumerable.Empty<IncidentDashboardView>(), 0));
+
+            var dashBoard = dashboard.PageSize.HasValue && dashboard.PageSize>0 ? await this.simsApp.Incidents.DashboardSearch(search: dashboard.Search ?? "", startPage: dashboard.PageNo, pageSize: dashboard.PageSize.Value) 
+                                                : await this.simsApp.Incidents.DashboardSearch(search: dashboard.Search ?? "", startPage: dashboard.PageNo);
+            return new OkObjectResult(new
+            {
+                Results = dashBoard,
+                TotalRecords = dashBoard.TotalResults
+            });
         }
 
     }
