# FSA.IncidentsManagement/Models/IncidentCloseViewModel.cs
@@ -1,0 +1,12 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Threading.Tasks;
+
+namespace FSA.IncidentsManagement.Models
+{
+    public class IncidentCloseViewModel
+    {
+        public int[] IncidentIds { get; set; }
+    }
+}
