# FSA.Tickets-Please/swagger.json
@@ -359,7 +359,7 @@
         }
       }
     },
-    "/api/Incidents": {
+    "/api/Incidents/{id}": {
       "get": {
         "tags": [
           "Incidents"
@@ -371,8 +371,9 @@
         ],
         "parameters": [
           {
-            "in": "query",
+            "in": "path",
             "name": "id",
+            "required": true,
             "type": "integer",
             "format": "int32"
           }
@@ -388,7 +389,9 @@
             "description": "Server Error"
           }
         }
-      },
+      }
+    },
+    "/api/Incidents": {
       "put": {
         "tags": [
           "Incidents"
@@ -460,7 +463,7 @@
         }
       }
     },
-    "/api/Incidents/Classification/{id}": {
+    "/api/Incidents/Classification/{id}/{classificationId}": {
       "post": {
         "tags": [
           "Incidents"
@@ -479,7 +482,7 @@
             "format": "int32"
           },
           {
-            "in": "query",
+            "in": "path",
             "name": "classificationId",
             "required": true,
             "type": "integer",
@@ -499,7 +502,7 @@
         }
       }
     },
-    "/api/Incidents/Status/{id}": {
+    "/api/Incidents/Status/{id}/{statusId}": {
       "post": {
         "tags": [
           "Incidents"
@@ -518,7 +521,7 @@
             "format": "int32"
           },
           {
-            "in": "query",
+            "in": "path",
             "name": "statusId",
             "required": true,
             "type": "integer",
@@ -556,11 +559,7 @@
             "name": "body",
             "required": true,
             "schema": {
-              "type": "array",
-              "items": {
-                "format": "int32",
-                "type": "integer"
-              }
+              "$ref": "#/definitions/IncidentCloseViewModel"
             }
           }
         ],
@@ -598,6 +597,43 @@
         "responses": {
           "200": {
             "description": "Success"
+          },
+          "500": {
+            "description": "Server Error"
+          }
+        }
+      }
+    },
+    "/api/Incidents/Dashboard": {
+      "post": {
+        "tags": [
+          "Incidents"
+        ],
+        "summary": "Incident dashboard search",
+        "operationId": "GetIncidentDashboard",
+        "consumes": [
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "$ref": "#/definitions/DashboardSearchViewModel"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/IncidentDashboardView"
+            }
           },
           "500": {
             "description": "Server Error"
@@ -1179,7 +1215,7 @@
         "tags": [
           "Signals"
         ],
-        "summary": "Get incident by id",
+        "summary": "Get Signal by id",
         "operationId": "GetSignal",
         "produces": [
           "application/json"
@@ -1208,7 +1244,7 @@
         "tags": [
           "Signals"
         ],
-        "summary": "Replace an incident",
+        "summary": "Replace an Signal",
         "operationId": "UpdateSignal",
         "consumes": [
           "application/json",
@@ -1243,7 +1279,7 @@
         "tags": [
           "Signals"
         ],
-        "summary": "Create an incident",
+        "summary": "Create an Signal",
         "operationId": "CreateSignal",
         "consumes": [
           "application/json",
@@ -1280,7 +1316,7 @@
         "tags": [
           "Signals"
         ],
-        "summary": "Update status of an incident",
+        "summary": "Update status of an Signal",
         "operationId": "UpdateSignalStatus",
         "produces": [
           "application/json"
@@ -1319,7 +1355,7 @@
         "tags": [
           "Signals"
         ],
-        "summary": "Update incident(s) lead officer",
+        "summary": "Update Signal(s) lead officer",
         "operationId": "UpdateSignalLeadOfficer",
         "consumes": [
           "application/json",
@@ -1350,8 +1386,8 @@
         "tags": [
           "Signals"
         ],
-        "summary": "Update incident(s) lead officer",
-        "operationId": "PromoteToIncident",
+        "summary": "Update Signal(s) lead officer",
+        "operationId": "PromoteToSignal",
         "parameters": [
           {
             "in": "path",
@@ -2178,6 +2214,18 @@
         }
       }
     },
+    "IncidentCloseViewModel": {
+      "type": "object",
+      "properties": {
+        "incidentIds": {
+          "type": "array",
+          "items": {
+            "format": "int32",
+            "type": "integer"
+          }
+        }
+      }
+    },
     "UpdateLeadOfficerModel": {
       "required": [
         "ids",
@@ -2194,6 +2242,61 @@
         },
         "officer": {
           "type": "string"
+        }
+      }
+    },
+    "DashboardSearchViewModel": {
+      "type": "object",
+      "properties": {
+        "search": {
+          "type": "string"
+        },
+        "pageSize": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "pageNo": {
+          "format": "int32",
+          "type": "integer"
+        }
+      }
+    },
+    "IncidentDashboardView": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "readOnly": true
+        },
+        "commonId": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "priority": {
+          "type": "string"
+        },
+        "title": {
+          "type": "string"
+        },
+        "notifier": {
+          "type": "string"
+        },
+        "leadOfficer": {
+          "type": "string"
+        },
+        "status": {
+          "type": "string"
+        },
+        "updated": {
+          "format": "date-time",
+          "type": "string"
+        },
+        "links": {
+          "type": "array",
+          "items": {
+            "format": "int32",
+            "type": "integer"
+          }
         }
       }
     },
